--- a/ms/DockerFile
+++ b/ms/DockerFile
@@ -1,3 +1,4 @@
 from amazoncorretto:11-alpine-jdk
 MAINTAINER Morena
-COPY 
+COPY target/ms-0.0.1-SNAPSHOT.jar ms-app.jar
+ENTRYPOINT ["java","-jar","/ms-app.jar"]
